Whole-class Re-format and Code-cleanup